--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "description": "برنامه پیش‌بینی آب و هوا با عشق ساخته شده توسط Shahab",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
